--- a/templates/app.html
+++ b/templates/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Banglore Home Price Prediction</title>
+    <title>BLR House Price Prediction</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../static/app.js"></script>
   <link rel="stylesheet" href="../static/app.css">
@@ -13,10 +13,12 @@
     </h1>
   </header>
   <aside>
-    BHK:No.of Bedrooms<br>
-    Bath: No. of bathrooms<br>
+    BHK:No.of Bedrooms<br><br>
+    Bath: No. of bathrooms<br><br>
     For detailed explaination:
-    <a href="https://github.com/prakx1/laughing-tribble/blob/master/Bengaluru-housing.ipynb">Jupyter Notebook</a>
+    <a href="https://github.com/prakx1/laughing-tribble/blob/master/Bengaluru-housing.ipynb">Jupyter Notebook</a><br><br>
+    
+    <a href="https://www.kaggle.com/amitabhajoy/bengaluru-house-price-data">Dataset Used(Bengaluru City)  </a>
   </aside>
 <!-- <div class="img"></div> -->
 <form class="form">
