--- a/static/app.css
+++ b/static/app.css
@@ -1,8 +1,31 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+@import url('https://fonts.googleapis.com/css2?family=Uchen&display=swap');
 
 body{
 	background-color: #c8c9c8;
 }
+a {
+	color: inherit;
+  }
+aside{
+	font-size: large;
+	float: left;
+	border: #838381 1px solid;
+	padding: 10px;
+	font-family: 'Uchen', serif;
+
+	
+}
+@media screen and (max-width:700px) {
+
+	aside{
+		font-family: 'Uchen', serif;
+		float: none;
+		text-align: center;
+	}
+}
+
+
 .switch-field {
 	display: flex;
 	margin-bottom: 36px;
@@ -50,7 +73,7 @@ body{
 
 .form {
 	max-width: 270px;
-	font-family: "Lucida Grande", Tahoma, Verdana, sans-serif;
+	font-family: 'Uchen', serif;
 	font-weight: normal;
 	line-height: 1.625;
 	margin: 8px auto;
@@ -64,9 +87,10 @@ header{
 h2 {
 	font-size: 18px;
 	margin-bottom: 8px;
+	font-family: 'Uchen', serif;
 }
 .area{
-  font-family: "Roboto", sans-serif;
+	font-family: 'Uchen', serif;
   outline: 0;
   background: #f2f2f2;
   width: 76%;
@@ -80,7 +104,7 @@ h2 {
 }
 
 .location{
-  font-family: "Roboto", sans-serif;
+	font-family: 'Uchen', serif;
   outline: 0;
   background: #f2f2f2;
   width: 76%;
@@ -117,7 +141,7 @@ h2 {
 }
 
 .img {
-  background: url('https://images.unsplash.com/photo-1564013799919-ab600027ffc6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+  background: url('https://images.unsplash.com/photo-1509592149237-bc44977d96d0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80');
 	background-repeat: no-repeat;
   background-size: auto;
   background-size:100% 100%;
@@ -142,4 +166,9 @@ body, html {
 }
 #Estimate:active{
 	border: 3px solid;
+	background-color: gray;
+}
+footer a{
+	font-size: larger;
+
 }
