--- a/templates/app.html
+++ b/templates/app.html
@@ -4,6 +4,7 @@
     <title>BLR House Price Prediction</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../static/app.js"></script>
+      <script src="https://kit.fontawesome.com/6a271b8d58.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../static/app.css">
 </head>
 <body>
@@ -13,14 +14,14 @@
     </h1>
   </header>
   <aside>
-    BHK:No.of Bedrooms<br><br>
-    Bath: No. of bathrooms<br><br>
+    BHK : No. of Bedrooms<br>
+    Bath : No. of bathrooms<br>
     For detailed explaination:
-    <a href="https://github.com/prakx1/laughing-tribble/blob/master/Bengaluru-housing.ipynb">Jupyter Notebook</a><br><br>
+    <a href="https://github.com/prakx1/laughing-tribble/blob/master/Bengaluru-housing.ipynb">Jupyter Notebook</a><br>
     
     <a href="https://www.kaggle.com/amitabhajoy/bengaluru-house-price-data">Dataset Used(Bengaluru City)  </a>
   </aside>
-<!-- <div class="img"></div> -->
+<div class="img"></div>
 <form class="form">
   <h2>Area (Square Feet)</h2>
     <input class="area"  type="text" id="uiSqft" class="floatLabel" name="Squareft" value="1000">
@@ -61,7 +62,7 @@
   </select>
 </div>
   <button id="Estimate"  class="submit" onclick="onClickedEstimatePrice()" type="button">Estimate Price</button>
-  <div id="uiEstimatedPrice" class="result">  <h2></h2> </div>
+  <div id="uiEstimatedPrice" class="result">  </i></h2> </div>
   <footer> 
     <a href="https://github.com/prakx1/laughing-tribble/">See other works</a>
   </footer>
