--- a/templates/app.html
+++ b/templates/app.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLR House Price Prediction</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../static/app.js"></script>
       <script src="https://kit.fontawesome.com/6a271b8d58.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../static/app.css">
+ 
 </head>
 <body>
+  
   <header>
     <h1>
       House price prediction using Linear Regression
     </h1>
   </header>
   <aside>
+    <p id="demo">gsfdg</p>
     BHK : No. of Bedrooms<br>
     Bath : No. of bathrooms<br>
     For detailed explaination:
@@ -66,5 +72,12 @@
   <footer> 
     <a href="https://github.com/prakx1/laughing-tribble/">See other works</a>
   </footer>
+  <script>
+    var w = window.innerWidth;
+    var h = window.innerHeight;
+    
+    var x = document.getElementById("demo");
+    x.innerHTML = "Browser width: " + w + ", height: " + h + ".";
+    </script>
 </body>
 </html>
